add crate service to autostart

--- a/aws-ami/99_crate.cfg
+++ b/aws-ami/99_crate.cfg
@@ -13,5 +13,7 @@ runcmd:
  - 'echo "# enable ec2 discovery" >> /etc/crate/crate.yml'
  - 'echo "discovery.zen.ping.multicast.enabled: false" >> /etc/crate/crate.yml'
  - 'echo "discovery.type: ec2" >> /etc/crate/crate.yml'
+ - 'chkconfig --levels 3 crate on'
+ - 'service crate start'
 
 # vim: syntax=yaml
