--- a/aws-ami/99_crate.cfg
+++ b/aws-ami/99_crate.cfg
@@ -2,6 +2,7 @@
 
 
 runcmd:
+ - 'sed -i "/jenkins/d" ~/.ssh/authorized_keys'
  - '/etc/cloud/cloud.cfg.d/crate-disks.sh'
  - 'echo "" >> /etc/crate/crate.yml'
  - 'echo "# use hostname as node name"'
