Added ec2-user home path to sed command

--- a/aws-ami/99_crate.cfg
+++ b/aws-ami/99_crate.cfg
@@ -2,7 +2,7 @@
 
 
 runcmd:
- - 'sed -i "/jenkins/d" ~/.ssh/authorized_keys'
+ - 'sed -i "/jenkins/d" /home/ec2-user/.ssh/authorized_keys'
  - '/etc/cloud/cloud.cfg.d/crate-disks.sh'
  - 'echo "" >> /etc/crate/crate.yml'
  - 'echo "# use hostname as node name"'
