--- a/aws-ami/99_crate.cfg
+++ b/aws-ami/99_crate.cfg
@@ -12,6 +12,9 @@ runcmd:
  - 'echo "" >> /etc/crate/crate.yml'
  - 'echo "# enable ec2 discovery" >> /etc/crate/crate.yml'
  - 'echo "discovery.type: ec2" >> /etc/crate/crate.yml'
+ - 'echo "" >> /etc/crate/crate.yml'
+ - 'echo "# Set bind and publish host to _global_" >> /etc/crate/crate.yml'
+ - 'echo "network.host: _global_" >> /etc/crate/crate.yml'
  - 'chkconfig --levels 3 crate on'
  - 'service crate start'
 
